# aws-cost-check

./: IAM_USER.md  README.md  pyproject.toml
lambda/: .gitignore  docker-compose.yml  package.json  serverless.yml  tsconfig.json  tslint.json
lambda/app/application/manager/: notify-manager-if.ts
lambda/app/application/repository/: billing-repository-if.ts  config-repository-if.ts  rate-repository-if.ts  screenshot-repository-if.ts
lambda/app/application/usecase/: get-current-billing.ts  notify-billing.ts  regist-billing.ts
lambda/app/application/usecase/__tests__/: get-current-billing.spec.ts
lambda/app/domain/model/: billing.ts  charge.ts  forecast.ts  service-charge-list.ts  service-charge.ts  site-info.ts  tax.ts  total.ts
lambda/app/domain/model/__tests__/: billing.spec.ts  charge.spec.ts
lambda/app/interface/api/: rate-repository.ts
lambda/app/interface/api/__tests__/: rate-repository.spec.ts
lambda/app/interface/aws/: billing-repository.ts  config-repository.ts  screenshot-repository.ts  ses-notify-manager.ts
lambda/app/interface/aws/__tests__/: billing-repository.spec.ts  config-repository.spec.ts  ses-notify-manager.spec.ts
lambda/app/interface/fixed/: fixed-rate-repository.ts
lambda/app/interface/fixed/__tests__/: fixed-rate-repository.spec.ts
lambda/app/interface/function/: main.ts
lambda/scripts/: regist-email.sh  setup-aws.sh  setup-localstack.sh
layers/: .gitignore  package.json  serverless.yml
layers/scripts/: build-chrome-aws-lambda.sh
